
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int zval ;
typedef int php_stream ;


 int GET_VER_OPT_STRING (char*,char*) ;
 size_t Z_STRLEN_P (int *) ;
 int Z_STRVAL_P (int *) ;
 int memcpy (char*,int ,size_t) ;

__attribute__((used)) static int php_openssl_passwd_callback(char *buf, int num, int verify, void *data)
{
 php_stream *stream = (php_stream *)data;
 zval *val = ((void*)0);
 char *passphrase = ((void*)0);


 GET_VER_OPT_STRING("passphrase", passphrase);

 if (passphrase) {
  if (Z_STRLEN_P(val) < (size_t)num - 1) {
   memcpy(buf, Z_STRVAL_P(val), Z_STRLEN_P(val)+1);
   return (int)Z_STRLEN_P(val);
  }
 }
 return 0;
}
